--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -6,6 +6,7 @@
 @import url('colours.css');
 @import url('dashboard.css');
 @import url('forms.css');
+@import url('icons.css');
 @import url('layout.css');
 @import url('leagues.css');
 @import url('loading.css');
