--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/leagues.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/leagues.css
@@ -1,4 +1,4 @@
-﻿.league-grid {
+﻿/*.league-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
@@ -69,4 +69,4 @@
 
     .league-card-footer .btn {
         flex-grow: 1;
-    }
+    }*/
