Update CSS Colours

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/JoinPrivateLeagueModal.razor
@@ -7,7 +7,7 @@
 
 <div class="modal fade" id="joinPrivateLeagueModal" tabindex="-1" aria-labelledby="joinPrivateLeagueModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content" style="background-color: var(--pl-light-purple); color: white;">
+        <div class="modal-content" style="background-color: var(--pl-purple-light); color: white;">
             <div class="modal-header" style="border-bottom-color: var(--pl-purple-dark);">
                 <h5 class="modal-title fw-bold text-white" id="joinPrivateLeagueModalLabel">Join Private League</h5>
                 <button type="button" class="btn-close btn-close-white" @onclick="Close" aria-label="Close"></button>
