--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/navbar.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/navbar.css
@@ -70,13 +70,13 @@
 }
 
     .dropdown-item:hover, .dropdown-item:focus {
-        color: var(--pl-light-purple);
+        color: var(--pl-purple-light);
         background-color: white;
         font-weight: bold;
     }
 
     .dropdown-item.active {
-        color: var(--pl-light-purple);
+        color: var(--pl-purple-light);
         background-color: white;
     }
 
