--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/AvailableLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/AvailableLeaguesTile.razor
@@ -28,8 +28,8 @@
 
                     <div class="league-card-body">
                         <div class="mb-1">
-                            <div class="status-pill-group status-pill-group--red">
-                                <span class="status-icon">
+                            <div class="badge-group badge-group--red">
+                                <span class="badge-icon">
                                     <i class="bi bi-alarm"></i>
                                 </span>
                                 <span>Deadline: @league.EntryDeadline.ToString("dd MMM yyyy HH:mm")</span>
@@ -37,15 +37,15 @@
                         </div>
 
                         <div class="card-info-row">
-                            <div class="status-pill-group status-pill-group--blue">
-                                <span class="status-icon">
+                            <div class="badge-group badge-group--blue">
+                                <span class="badge-icon">
                                     <i class="bi bi-people-fill"></i>
                                 </span>
                                 <span>@league.MemberCount</span>
                             </div>
 
-                            <div class="status-pill-group status-pill-group--green">
-                                <span class="status-icon">
+                            <div class="badge-group badge-group--green">
+                                <span class="badge-icon">
                                     <i class="bi bi-cash-stack"></i>
                                 </span>
                                 <span>@(league.Price > 0 ? league.Price.ToString("C", new CultureInfo("en-GB")) : "Free Entry")</span>
