--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/CountdownTimer.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/CountdownTimer.razor
@@ -1,8 +1,8 @@
 ﻿@implements IAsyncDisposable
 @inject IJSRuntime JsRuntime
 
-<div class="status-pill-group status-pill-group--red">
-    <span class="status-icon" title="Deadline">
+<div class="badge-group badge-group--red">
+    <span class="badge-icon" title="Deadline">
         <i class="bi bi-alarm"></i>
     </span>
     <span>
