--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/RoundCard.razor
@@ -13,8 +13,8 @@
             }
             else
             {
-                <div class="status-pill-group status-pill-group--red">
-                    <span class="status-icon" title="Deadline">
+                <div class="badge-group badge-group--red">
+                    <span class="badge-icon" title="Deadline">
                         <i class="bi bi-alarm"></i>
                     </span>
                     <span>
