--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -30,7 +30,7 @@
     }
 
     .testimonial-card {
-        background-color: var(--pl-light-purple);
+        background-color: var(--pl-purple-light);
         border: none;
     }
 
@@ -77,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="py-5" style="background-color: var(--pl-light-purple);">
+            <div class="py-5" style="background-color: var(--pl-purple-light);">
                 <div class="container px-4">
                     <h2 class="text-center text-white fw-bold mb-5">Why Join Prediction League?</h2>
                     <div class="row align-items-center g-5">
